# botster-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  botster-package.json  plugin.lua  test.sh
.cargo/: config.toml
crates/botster-tui/: Cargo.toml
crates/botster-tui-spike/: Cargo.toml  README.md
crates/botster-tui-spike/src/: lib.rs  main.rs
crates/botster-tui/src/: app.rs  main.rs  renderer.rs  socket_client.rs
crates/botster-tui/tests/: package_manifest_test.rs
docs/: tui-kit-production-polish-followups.md
docs/adr/: 0001-ratatui-crossterm-tui-renderer-foundation.md
docs/plans/: ratatui-crossterm-foundation-proof.md  tui-admitted-plugin-navigation-registry-plan.md  tui-dev-stack-package-client-plan.md  tui-dogfood-uinode-hub-surface-plan.md  tui-hub-compatibility-diagnostics-plan.md  tui-hub-test-support-0.1.5-readiness-terminal-input-plan.md  tui-installed-app-registry-plan.md  tui-kit-activate-on-release-mouse-consumption-plan.md  tui-kit-full-sgr-mouse-passthrough-pin-plan.md  tui-kit-upgraded-primitives-consumption-plan.md  tui-live-hub-verification-hardening-plan.md  tui-marketplace-lifecycle-dependency-gates-plan.md  tui-package-configuration-forms-plan.md  tui-package-entrypoint-process-state-plan.md  tui-package-registry-display-plan.md  tui-plugin-contract-matrix-conformance-smoke-plan.md  tui-production-attach-history-readback-plan.md  tui-production-client-live-hub-verification-plan.md  tui-production-terminal-mouse-mode-enablement-plan.md  tui-push-session-lifecycle-reconciliation-plan.md  tui-real-hub-dogfood-hardening-plan.md  tui-render-snapshot-scrollback-events-plan.md  tui-responsive-session-workspace-plan.md  tui-uinode-renderer-primitives-plan.md
script/: clippy  fmt  test  test-live-hub
