[package]
name = "botster-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE"

[dependencies]
botster-core = { git = "https://github.com/trybotster/botster-core.git", rev = "978c436865c215828b02a8b0fcca5f8d89413e96", default-features = false }
botster-hub-client = { git = "https://github.com/trybotster/botster-hub.git", rev = "8f2fdc380e1f0b5671a841797b20794c23d3e033" }
botster-tui-kit = { git = "https://github.com/trybotster/botster-tui-kit.git", rev = "fa0a728297c51d659b675f7d4201a3910a25bd82" }
crossterm = "0.29.0"
ratatui = "0.30.2"
serde_json = "1.0"

[dev-dependencies]
botster-core-test-support = { git = "https://github.com/trybotster/botster-core.git", rev = "978c436865c215828b02a8b0fcca5f8d89413e96", default-features = false }
botster-hub-test-support = { git = "https://github.com/trybotster/botster-hub.git", rev = "8f2fdc380e1f0b5671a841797b20794c23d3e033" }
