[package]
name = "botster-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE"

[dependencies]
botster-core = { git = "https://github.com/trybotster/botster-core.git", rev = "7d52fb78024b45764d6830cf4c6b131f13a83e62", default-features = false }
botster-hub-client = { git = "https://github.com/trybotster/botster-hub.git", rev = "02bffebd0e29cb69a8e1e639e01f704f6dfffe48" }
botster-tui-kit = { git = "https://github.com/trybotster/botster-tui-kit.git", rev = "fb0fdcb87d102232cb015b6da782a971903b4190" }
crossterm = "0.29.0"
ratatui = "0.30.2"
serde_json = "1.0"

[dev-dependencies]
botster-core-test-support = { git = "https://github.com/trybotster/botster-core.git", rev = "7d52fb78024b45764d6830cf4c6b131f13a83e62", default-features = false }
botster-hub-test-support = { git = "https://github.com/trybotster/botster-hub.git", rev = "02bffebd0e29cb69a8e1e639e01f704f6dfffe48" }
